--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 </head>
 
 <body>
-    <div class="container">
+    <div class="container m-5">
         <div class="search-bar-container">
             <!-- Category Dropdown Menu -->
             <div class="btn-group">
